@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-09T01:04:08Z",
-  "count_outdated" : 5362,
-  "uniques_outdated" : 2973,
-  "count" : 5384,
-  "uniques" : 2994,
+  "timestamp" : "2025-10-09T12:28:35Z",
+  "count_outdated" : 5363,
+  "uniques_outdated" : 2974,
+  "count" : 5385,
+  "uniques" : 2995,
   "clones" : [
-    {
-      "timestamp": "2025-09-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-26T00:00:00Z",
       "count": 1,
@@ -121,6 +112,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-10-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
