@@ -3,11 +3,6 @@
   "uniques": 6,
   "clones": [
     {
-      "timestamp": "2025-09-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-09-26T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -66,6 +61,11 @@
       "timestamp": "2025-10-08T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-10-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
